--- a/rss-reader/app/src/main/res/layout/activity_main.xml
+++ b/rss-reader/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/notes_recycler_view"
+        android:id="@+id/articles_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
